# AliStach-V1

./: .dockerignore  .env.example  .env.production  .env.python.example  .env.secure.example  .env.vercel  .gitignore  .pre-commit-config.yaml  ALIEXPRESS_API_VERIFICATION_REPORT.md  ALIEXPRESS_SERVICE_MODULES_SUMMARY.md  API_OPERATIONAL_STATUS_REPORT.md  API_ROUTES_COMPLETION_SUMMARY.md  API_VERIFICATION_SUMMARY.md  BUGFIX_REPORT.md  CATEGORIES_API_REPORT.md  CHANGELOG.md  CLEANUP_REPORT.md  CONNECT_TO_GPT.md  CONTINUOUS_DEPLOYMENT_FINAL_REPORT.md  CORS_FIX_CODE_CHANGES.md  CORS_FIX_SUMMARY.md  CRITICAL_FIX.md  DEMO_RESULTS.md  DEPLOYMENT.md  DEPLOYMENT_COMPARISON.md  DEPLOYMENT_FINAL_FIX.md  DEPLOYMENT_FIX_GUIDE.md  DEPLOYMENT_FIX_REPORT.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_FUNCTION_FIX_AND_ALIAS.md  DEPLOYMENT_ID.txt  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_NEXT_STEPS.md  DEPLOYMENT_READY.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_RENDER.md  DEPLOYMENT_SUCCESS_REPORT.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_VERIFICATION_REPORT.md  (+127 more)
.github/workflows/: quality.yml  tests.yml
.kiro/specs/aliexpress-api-proxy/: design.md  requirements.md  (+1 more)
.vercel/: project.json
api/: aliexpress.js  cache_service.py  index.js  index.py  index.py.backup  index_simple.py  main.py  minimal_test.py  requirements.txt  test_minimal.py  ultra_minimal.py
docs/: MIGRATION_GUIDE.md  MODERNIZATION_REPORT.md  README.md  openapi-gpt.json  openapi.json
docs/analysis/: logging-standardization-summary.md  repository-audit-report.md
docs/api/: API_ENDPOINT_AUDIT.md  IMAGE_SEARCH_API.md  PAGINATION_IMPLEMENTATION.md  authentication.md  examples.md
docs/architecture/: components.md  data-flow.md  overview.md
docs/deployment/: docker.md  render.md  vercel.md
docs/development/: LOGGING_STANDARDS.md  contributing.md  setup.md  testing.md
docs/operations/: LOGGING_QUICK_REFERENCE.md  monitoring.md  runbook.md  troubleshooting.md
docs/tests/: 01_debug_env.json  02_health.json  03_categories.json  06_categories_children.json  07_affiliate_link.json  08_affiliate_links.json  09_smart_match.json  10_orders_error.txt  11_products_search_fixed.json  12_smart_match_fixed.json  FINAL_REPORT.md  FINAL_REPORT_UPDATED.md  available_endpoints.txt  pagination_test1_first_page.json  pagination_test2_page2.json  pagination_test3_post.json
examples/: basic_usage.py
middleware/: security.js  validation.js
public/: openapi-gpt.json
scripts/: check_image_search_api.py  check_image_search_methods.py  check_sdk_methods.py  demo.py  demo_service_modules.py  final_test.py  integration_example.py  production_test.py  research_image_api.py  security_health_check.py  simple_affiliate_test.py  test_affiliate_links.py  test_all_endpoints.py  test_endpoints.py
src/: __init__.py  exceptions.py
src/api/: main.py
src/middleware/: __init__.py  audit_logger.py  csrf.py  jwt_auth.py  rate_limiter.py  request_id.py  security.py  security_headers.py
src/models/: __init__.py  cache_models.py  responses.py
src/services/: aliexpress_service.py  aliexpress_service_with_mock.py  cache_analytics.py  cache_config.py  cache_service.py  data_validator.py  enhanced_aliexpress_service.py  image_processing_service.py  mock_data_service.py  monitoring_service.py  service_capability_detector.py  service_exceptions.py  service_factory.py  smart_search_fallback.py
src/utils/: api_signature.py  config.py  environment_detector.py  logging_config.py  response_formatter.py
tests/: conftest.py
tests/fixtures/: api_responses.py  test_data.py
tests/integration/: test_api_endpoints.py  test_full_workflow.py  test_smart_search_capability_detection.py  test_smart_search_endpoint.py  test_smart_search_integration.py  test_smart_search_real.py
tests/unit/: test_aliexpress_service.py  test_config.py  test_response_models.py
tools/: __init__.py  quality_gate.py  repository_analyzer.py
utils/: methods.js  mock-data.js  parameters.js  response.js  signature.js
(+58 files in other folders)
